--- a/index.html
+++ b/index.html
@@ -771,9 +771,9 @@
                             <div class="container__products">
                                 <div class="container__product-banner">
                                     <img class="container__product-img"
-                                        src="./assets/img/shoes/H/Adidas UltraBoost 20 Marathon 'Pure Red'.png" alt="">
+                                        src="./assets/img/shoes/H/Adidas UltraBoost 20 Marathon _Pure Red_.png" alt="">
                                     <div class="container__banner">
-                                        <img src="./assets/img/shoes/H1/UltraBoost 'Pure Red'.png" alt=""
+                                        <img src="./assets/img/shoes/H1/UltraBoost _Pure Red_.png" alt=""
                                             class="container__banner-img">
                                     </div>
                                 </div>
