--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
                         <div class="product__container">
                             <div class="col l-4 c-12">
                                 <a class="product__item main-effect" href="#">
-                                    <img class="product__img" src="./assets/img/shoes/Men's shoes.jpg" alt="">
+                                    <img class="product__img" src="./assets/img/shoes/Men_s shoes.jpg" alt="">
                                     <div class="product__desc">
                                         <h3 class="product__desc-title">Giày nam</h3>
                                         <h5 class="product__des--quantity">Chính hãng</h5>
                                     </div>
                                 </a>
                                 <a class="product__item main-effect product__item--mt-16" href="#">
-                                    <img class="product__img" src="./assets/img/shoes/Women's shoes.jpg" alt="">
+                                    <img class="product__img" src="./assets/img/shoes/Women_s shoes.jpg" alt="">
                                     <div class="product__desc">
                                         <h3 class="product__desc-title">Giày nữ</h3>
                                         <h5 class="product__des--quantity">Chính hãngl</h5>
